not self-hosting of main runner

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ defaults:
 jobs:
   build:
     name: Build and Test
-    runs-on: [self-hosted, linux, x64]
+    runs-on: [linux, x64]
 
     steps:
       - name: Checkout
