--- a/.github/workflows/sled.yml
+++ b/.github/workflows/sled.yml
@@ -1,4 +1,4 @@
-name: SLED
+name: SLED v2
 
 on:
   schedule:
@@ -16,9 +16,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: ./
+      - uses: freckle/stack-lint-extra-deps@v1.3.0.1
         with:
-          arguments: --fix --no-exit
+          arguments: --no-check-resolver --fix --no-exit
+
+      - name: Re-generate lock file
+        run: |
+          stack test json-fleece-core
 
       # Use a token to ensure CI runs on the created PR
       - id: token
